# ad-hoc-old

./: .gitignore  CMakeLists.txt  README.md
include/: partitionGenerator.h
src/: CMakeLists.txt  bdouble.cpp  bdouble.h  partitionGenerator.cpp
test/: CMakeLists.txt  test_correctness.cpp
